--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -64,6 +64,7 @@ version = '5.0.0'
 sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 log = { version = "0.4.0", default-features = false }
+pallet-slashing = { version = "3.0.0", default-features = false, path = "../slashing" }
 
 [features]
 default = ['std']
@@ -75,6 +76,7 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'frame-benchmarking/std',
+	'pallet-slashing/std',
 	"sp-std/std",
 	"sp-runtime/std",
 ]
