--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "signing-client"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,6 +12,7 @@ serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 parity-scale-codec = "2.3.1"
 common = { path = "../../crypto/common", default-features = false }
+subxt = { git = "https://github.com/paritytech/subxt.git" }
 
 [features]
 default = ['std']
