--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -17,3 +17,4 @@ rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]
 surf = "2"
 serde = { version = "1.0", features = ["derive"] }
 async-sse = "5"
+curv-kzen = { version = "0.9", default-features = false }
