--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -9,6 +9,17 @@ edition = "2021"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.51"
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
+anyhow = "1.0.53"
+tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
+futures = "0.3"
+round-based = { version = "0.1.4", features = ["dev"] }
+serde_json = "1.0"
+structopt = "0.3"
+rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
+surf = "2"
+serde = { version = "1.0", features = ["derive"] }
+async-sse = "5"
+curv-kzen = { version = "0.9", default-features = false }
 sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
 subxt = { git = "https://github.com/paritytech/subxt.git" }
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
