--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -67,6 +67,9 @@ sp-io = { version = "4.0.0-dev", default-features = false,  git = "https://githu
 lite-json = { version = "0.1", default-features = false }
 sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate", branch = "master" }
+common = { path = "../../crypto/common", default-features = false }
+
+
 
 [dev-dependencies]
 sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
