--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ panic = 'unwind'
 
 [workspace]
 members = [
-    'crypto/protocol',
+    'crypto/*',
     'node/*',
     'pallets/*',
     'runtime',
