--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { version = "0.5.0-rc.1", default-features = false }
+rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]}
 reqwest = { version = "0.9", default-features = false }
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 parity-scale-codec = "2.3.1"
 common = { path = "../../crypto/common", default-features = false }
-
+multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
+curv-kzen = { version = "0.9", default-features = false }
 [features]
 default = ['std']
 std = []
