--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ panic = 'unwind'
 [workspace]
 members = [
     'crypto/protocol',
+    'crypto/signing-client',
     'node/*',
     'pallets/*',
     'runtime',
