--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -15,6 +15,11 @@ common = { path = "../../crypto/common", default-features = false }
 subxt = { git = "https://github.com/paritytech/subxt.git" }
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
 curv-kzen = { version = "0.9", default-features = false }
+anyhow = "1.0.53"
+futures = "0.3"
+tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
+serde = { version = "1.0", features = ["derive"] }
+
 
 [features]
 default = ['std']
