--- a/Rocket.toml
+++ b/Rocket.toml
@@ -2,7 +2,7 @@
 address = "127.0.0.1"
 port = 3001
 workers = 16
-keep_alive = 5
+keep_alive = 100
 ident = "Rocket"
 log_level = "normal"
 #temp_dir = "/tmp"
@@ -11,6 +11,7 @@ cli_colors = true
 #secret_key = "hPRYyVRiMyxpw5sBB1XeCMN1kFsDCqKvBi2QJxBVHQk="
 
 [default.limits]
+string = "50 MiB"
 forms = "64 kB"
 msgpack = "2 MiB"
 "file/jpg" = "5 MiB"
