--- a/alice-send/Cargo.toml
+++ b/alice-send/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
 curv-kzen = { version = "0.9", default-features = false }
+httpmock = "0.6.6"
+isahc = "1.6.0"
