--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -18,6 +18,7 @@ async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.51"
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
 anyhow = "1.0.53"
+thiserror = "1.0.30"
 tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
 futures = "0.3"
 round-based = { version = "0.1.4", features = ["dev"] }
