--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/cli/main.rs"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.51"
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
+zk-paillier = { version = "0.4.2", default-features = false }
 anyhow = "1.0.53"
 thiserror = "1.0.30"
 tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
@@ -35,7 +36,13 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 parity-scale-codec-derive = "2.3.1"
 common = { path = "../../crypto/common", default-features = false }
 
+
 [dependencies.scale-info]
 default-features = false
 features = ['derive']
 version = '1.0'
+
+[dependencies.paillier]
+version = "0.4.2"
+package = "kzen-paillier"
+default-features = false
