--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  core:
-    name: Core
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: SKIP_WASM_BUILD=1 cargo check --release
   test:
     name: Test
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: pushd node && cargo test
+      - run: pushd node && cargo build --release && cargo test
   benchmark:
     name: Benchmark
     runs-on: ubuntu-20.04
