--- a/crypto/common/Cargo.toml
+++ b/crypto/common/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
 scale-info = { version = '1.0', default-features = false, features = ['derive'] }
-
+sp-core = { version = "4.1.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
