--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -22,6 +22,9 @@ tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util
 serde = { version = "1.0", features = ["derive"] }
 surf = "2"
 
+[dev-dependencies]
+sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
+
 
 [features]
 default = ['std']
