--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -60,6 +60,7 @@ version = '4.0.0-dev'
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 pallet-relayer = { version = "3.0.0", default-features = false, path = "../relayer" }
 pallet-staking-extension = { version = "3.0.0", default-features = false, path = "../staking" }
+helpers = { path = "../helpers", default-features = false }
 
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 log = { version = "0.4.0", default-features = false }
@@ -99,6 +100,7 @@ std = [
 	'pallet-staking-extension/std',
 	'pallet-balances/std',
 	'pallet-babe/std',
+	'helpers/std',
 	"sp-io/std",
 	"sp-runtime/std",
 	"sp-application-crypto/std",
