--- a/pallets/helpers/Cargo.toml
+++ b/pallets/helpers/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = { version = "0.4.0", default-features = false }
 
 
 [features]
 default = ['std']
-std = []
+std = ["log/std"]
