--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -66,6 +66,7 @@ pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'ht
 log = { version = "0.4.0", default-features = false }
 # protocol = { path = "../../crypto/protocol", default-features = false }
 common = { path = "../../crypto/common", default-features = false }
+helpers = { path = "../helpers", default-features = false }
 
 [features]
 default = ['std']
@@ -77,6 +78,7 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'frame-benchmarking/std',
+	'helpers/std',
 	"sp-std/std",
 	"sp-runtime/std",
 ]
