--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -49,6 +49,7 @@ version = "4.1.0-dev"
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = "master"
+version = "4.0.0-dev"
 
 [dev-dependencies.sp-runtime]
 default-features = false
