--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -13,17 +13,23 @@ frame-system      ={ git="https://github.com/paritytech/substrate", branch="mast
 sp-std            ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
 
 [dev-dependencies]
-sp-core={ git="https://github.com/paritytech/substrate", branch="master" }
-sp-io  ={ git="https://github.com/paritytech/substrate", branch="master" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-core        ={ git="https://github.com/paritytech/substrate", branch="master" }
+sp-io          ={ git="https://github.com/paritytech/substrate", branch="master" }
+pallet-balances={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 
 [features]
 default=["std"]
 runtime-benchmarks=[
-	'frame-benchmarking',
-	'frame-support/runtime-benchmarks',
-	'frame-system/runtime-benchmarks',
-	'pallet-balances/runtime-benchmarks',
+  'frame-benchmarking',
+  'frame-support/runtime-benchmarks',
+  'frame-system/runtime-benchmarks',
+  'pallet-balances/runtime-benchmarks',
 ]
-std=["scale-info/std", "sp-runtime/std", "frame-support/std", "frame-system/std", "pallet-balances/std"]
+std=[
+  "scale-info/std",
+  "sp-runtime/std",
+  "frame-support/std",
+  "frame-system/std",
+  "pallet-balances/std",
+]
 try-runtime=["frame-support/try-runtime"]
