--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -26,10 +26,10 @@ sp-core           ="6.0.0"
 tofn              ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
 
 # Entropy
-non-substrate-common={ path="../non-substrate-common", default-features=false }
-substrate-common    ={ path="../substrate-common", default-features=false }
-kvdb                ={ path="../kvdb", default-features=false }
-constraints         ={ path="../constraints" }
+# non-substrate-common={ path="../non-substrate-common", default-features=false }
+substrate-common={ path="../substrate-common", default-features=false }
+kvdb            ={ path="../kvdb", default-features=false }
+constraints     ={ path="../constraints" }
 
 # Logging
 log               ="0.4.17"                                          # todo: remove, overlaps tracing
