--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -66,9 +66,9 @@ pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='htt
 log                     ={ version="0.4.0", default-features=false }
 pallet-slashing         ={ version="3.0.0", default-features=false, path="../slashing" }
 pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
-non-substrate-common    ={ path="../../crypto/non-substrate-common", default-features=false }
-substrate-common        ={ path="../../crypto/substrate-common", default-features=false }
-helpers                 ={ path="../helpers", default-features=false }
+# non-substrate-common    ={ path="../../crypto/non-substrate-common", default-features=false }
+substrate-common={ path="../../crypto/substrate-common", default-features=false }
+helpers         ={ path="../helpers", default-features=false }
 
 [dev-dependencies]
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
