--- a/crypto/kvdb/Cargo.toml
+++ b/crypto/kvdb/Cargo.toml
@@ -13,7 +13,7 @@ thiserror   ="1.0.31"
 project-root="0.2.2"
 
 # Crypto
-tofn            ={ git="https://github.com/axelarnetwork/tofn", branch="main" }
+tofn            ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
 zeroize         ={ version="1.4", features=["zeroize_derive"], default-features=false }
 rpassword       ={ version="5.0", default-features=false }
 scrypt          ={ version="0.8", default-features=false, features=["std"] }
