--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -14,15 +14,16 @@ version    ='3.0.0-monthly-2021-10'
 targets=['x86_64-unknown-linux-gnu']
 
 [[bin]]
-name='entropy'
+name             ='entropy'
+path             ="bin/main.rs"
+required-features=["cli"]
 
-[build-dependencies.substrate-build-script-utils]
-git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.30"
-version='3.0.0'
+[lib]
+crate-type=["cdylib", "rlib"]
 
 [dependencies]
 jsonrpc-core                ='18.0.0'
+clap                        ={ version="3.1.18", features=["derive"], optional=true }
 codec                       ={ package="parity-scale-codec", version="3.0.0" }
 structopt                   ='0.3.8'
 grandpa-primitives          ={ version="4.0.0-dev", package="sp-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -51,7 +52,6 @@ sc-consensus-epochs         ={ version="0.10.0-dev", git='https://github.com/par
 sc-finality-grandpa-rpc     ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 grandpa                     ={ version="0.10.0-dev", package="sc-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sp-keystore                 ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-clap                        ={ version="3.0", features=["derive"] }
 jsonrpsee                   ={ version="0.15.1", features=["server"] }
 sp-inherents                ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sp-keyring                  ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -59,6 +59,33 @@ frame-system                ={ version="4.0.0-dev", git='https://github.com/pari
 frame-system-rpc-runtime-api={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 pallet-transaction-payment  ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 pallet-free-tx              ={ version="3.0.0-monthly-2021-10", path="../../pallets/free-tx" }
+node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+
+[build-dependencies]
+clap                        ={ version="3.1.18", optional=true }
+clap_complete               ={ version="3.0", optional=true }
+node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+frame-benchmarking-cli      ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-build-script-utils={ version="3.0.0", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+try-runtime-cli             ={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-cli                      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-balances             ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+
+[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
+node-executor={ version="3.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
+    "wasmtime",
+] }
+sc-cli={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
+    "wasmtime",
+] }
+sc-service={ version="0.10.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
+    "wasmtime",
+] }
+sp-trie={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
+    "memory-tracker",
+] }
 
 [dev-dependencies]
 sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -75,9 +102,10 @@ branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.frame-benchmarking-cli]
-git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.30"
-version='4.0.0-dev'
+git     ='https://github.com/paritytech/substrate.git'
+branch  ="polkadot-v0.9.30"
+version ='4.0.0-dev'
+optional=true
 
 [dependencies.pallet-transaction-payment-rpc]
 git    ='https://github.com/paritytech/substrate.git'
@@ -198,5 +226,19 @@ branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [features]
-default           =[]
-runtime-benchmarks=['entropy-runtime/runtime-benchmarks']
+default=["cli"]
+cli=[
+    "node-inspect",
+    "sc-cli",
+    "frame-benchmarking-cli",
+    "substrate-frame-cli",
+    "sc-service/rocksdb",
+    "clap",
+    "clap_complete",
+    "substrate-build-script-utils",
+    "try-runtime-cli",
+]
+runtime-benchmarks=[
+    'entropy-runtime/runtime-benchmarks',
+    "frame-benchmarking-cli/runtime-benchmarks",
+]
