--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -14,16 +14,11 @@ version    ='3.0.0-monthly-2021-10'
 targets=['x86_64-unknown-linux-gnu']
 
 [[bin]]
-name             ='entropy'
-path             ="bin/main.rs"
-required-features=["cli"]
-
-[lib]
-crate-type=["cdylib", "rlib"]
+name='entropy'
 
 [dependencies]
 jsonrpc-core                ='18.0.0'
-clap                        ={ version="3.1.18", features=["derive"], optional=true }
+clap                        ={ version="3.1.18", features=["derive"] }
 codec                       ={ package="parity-scale-codec", version="3.0.0" }
 structopt                   ='0.3.8'
 grandpa-primitives          ={ version="4.0.0-dev", package="sp-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -37,11 +32,9 @@ node-primitives             ={ version="2.0.0", git='https://github.com/parityte
 rand                        ="0.7.2"
 sc-sync-state-rpc           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 futures                     ="0.3.16"
-entropy-executor            ={ version="3.0.0-dev", path='../executor' }
 sc-consensus-babe           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-network                  ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-network-common           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-entropy-rpc                 ={ version="3.0.0-dev", path="../rpc" }
 sc-consensus-slots          ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sp-transaction-storage-proof={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-authority-discovery      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -49,8 +42,8 @@ sp-authorship               ={ version="4.0.0-dev", git='https://github.com/pari
 sc-consensus-uncles         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-consensus-babe-rpc       ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-consensus-epochs         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-finality-grandpa         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-finality-grandpa-rpc     ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-grandpa                     ={ version="0.10.0-dev", package="sc-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sp-keystore                 ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 jsonrpsee                   ={ version="0.15.1", features=["server"] }
 sp-inherents                ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
@@ -61,35 +54,22 @@ pallet-transaction-payment  ={ version="4.0.0-dev", git='https://github.com/pari
 pallet-free-tx              ={ version="3.0.0-monthly-2021-10", path="../../pallets/free-tx" }
 node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-sysinfo                  ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 
 [build-dependencies]
 clap                        ={ version="3.1.18", optional=true }
 clap_complete               ={ version="3.0", optional=true }
 node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-frame-benchmarking-cli      ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-substrate-build-script-utils={ version="3.0.0", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-build-script-utils={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 try-runtime-cli             ={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-cli                      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 pallet-balances             ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 
-[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
-node-executor={ version="3.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
-    "wasmtime",
-] }
-sc-cli={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
-    "wasmtime",
-] }
-sc-service={ version="0.10.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
-    "wasmtime",
-] }
-sp-trie={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30", features=[
-    "memory-tracker",
-] }
+sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 
 [dev-dependencies]
 sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
-sp-tracing     ={ version="5.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 tempfile       ="3.1.0"
 
 [dependencies.entropy-runtime]
@@ -102,10 +82,9 @@ branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.frame-benchmarking-cli]
-git     ='https://github.com/paritytech/substrate.git'
-branch  ="polkadot-v0.9.30"
-version ='4.0.0-dev'
-optional=true
+git    ='https://github.com/paritytech/substrate.git'
+branch ="polkadot-v0.9.30"
+version='4.0.0-dev'
 
 [dependencies.pallet-transaction-payment-rpc]
 git    ='https://github.com/paritytech/substrate.git'
@@ -226,19 +205,9 @@ branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [features]
-default=["cli"]
-cli=[
-    "node-inspect",
-    "sc-cli",
-    "frame-benchmarking-cli",
-    "substrate-frame-cli",
-    "sc-service/rocksdb",
-    "clap",
-    "clap_complete",
-    "substrate-build-script-utils",
-    "try-runtime-cli",
-]
+default=[]
 runtime-benchmarks=[
     'entropy-runtime/runtime-benchmarks',
+    "frame-benchmarking/runtime-benchmarks",
     "frame-benchmarking-cli/runtime-benchmarks",
 ]
