--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -51,6 +51,7 @@ sp-keyring                        ={ version="6.0.0", git='https://github.com/pa
 frame-system                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 frame-system-rpc-runtime-api      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 pallet-transaction-payment        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-staking-extension          ={ version="3.0.0", path="../../pallets/staking" }
 pallet-free-tx                    ={ version="3.0.0-monthly-2021-10", path="../../pallets/free-tx" }
 node-inspect                      ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
