--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -57,6 +57,7 @@ node-inspect                      ={ version="0.9.0-dev", optional=true, git='ht
 substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 sc-sysinfo                        ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+entropy-rpc                       ={ path="../rpc" }
 
 [build-dependencies]
 clap                        ={ version="3.1.18", optional=true }
